{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 68,
  "lineage": "32e0a8d4-a5a0-0f1f-df46-4c4f94575ae5",
  "resources": [
    {
      "module": "module.alb_443_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:security-group/sg-0a2675ebe866a65e8",
            "description": "Allow port 443 TCP inbound to alb with custom ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to ELB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a2675ebe866a65e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to ELB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "main-elb-security-group-20220704022746198000000002",
            "name_prefix": "main-elb-security-group-",
            "owner_id": "003729975368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-elb-security-group",
              "name": "main-elb-sg"
            },
            "tags_all": {
              "Name": "main-elb-security-group",
              "name": "main-elb-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0c1c65eedb209f445"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_443_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https to ELB",
            "from_port": 0,
            "id": "sgrule-2347282378",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a2675ebe866a65e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.alb_443_sg.aws_security_group.this",
            "module.alb_443_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.alb_443_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https to ELB",
            "from_port": 443,
            "id": "sgrule-4007120223",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a2675ebe866a65e8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.alb_443_sg.aws_security_group.this",
            "module.alb_443_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.launch-template-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:003729975368:security-group/sg-05a496448894308df",
            "description": "Allow port 80 TCP inbound to ec2 ASG instances within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to ELB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-05a496448894308df",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to ELB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https to ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main-lt-security-group-20220704043554691800000001",
            "name_prefix": "main-lt-security-group-",
            "owner_id": "003729975368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-lt-security-group",
              "name": "main-elb-sg"
            },
            "tags_all": {
              "Name": "main-lt-security-group",
              "name": "main-elb-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0c1c65eedb209f445"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.launch-template-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https to ELB",
            "from_port": 0,
            "id": "sgrule-2066075001",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a496448894308df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.launch-template-sg.aws_security_group.this",
            "module.launch-template-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.launch-template-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https to ELB",
            "from_port": 80,
            "id": "sgrule-2730553851",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a496448894308df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.launch-template-sg.aws_security_group.this",
            "module.launch-template-sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "https to ELB",
            "from_port": 3306,
            "id": "sgrule-1279126793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a496448894308df",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.launch-template-sg.aws_security_group.this",
            "module.launch-template-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.main-elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003729975368:loadbalancer/app/main-elb/92f076661127e621",
            "arn_suffix": "app/main-elb/92f076661127e621",
            "desync_mitigation_mode": "defensive",
            "dns_name": "main-elb-342875265.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:003729975368:loadbalancer/app/main-elb/92f076661127e621",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "main-elb",
            "security_groups": [
              "sg-0a2675ebe866a65e8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ed3e01828d0b9f6"
              },
              {
                "subnet_id": "subnet-0eccd91289a0ae0dd"
              }
            ],
            "subnets": [
              "subnet-06ed3e01828d0b9f6",
              "subnet-0eccd91289a0ae0dd"
            ],
            "tags": {
              "Name": "main-elb",
              "name": "main_elb"
            },
            "tags_all": {
              "Name": "main-elb",
              "name": "main_elb"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0c1c65eedb209f445",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc",
            "module.alb_443_sg.aws_security_group.this",
            "module.alb_443_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.main-elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003729975368:listener/app/main-elb/92f076661127e621/9416a57e449ff9c3",
            "certificate_arn": "arn:aws:acm:us-east-1:003729975368:certificate/8623f1a4-1848-418b-8300-aa13a96a034d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:003729975368:targetgroup/main20220704030229992900000001/ce689bbf597d6041",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:003729975368:listener/app/main-elb/92f076661127e621/9416a57e449ff9c3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:003729975368:loadbalancer/app/main-elb/92f076661127e621",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "name": "main-alb-listener"
            },
            "tags_all": {
              "name": "main-alb-listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.shaunsawslabzone",
            "data.terraform_remote_state.level1-main-vpc",
            "module.alb_443_sg.aws_security_group.this",
            "module.alb_443_sg.aws_security_group.this_name_prefix",
            "module.elb_friendly_name.aws_acm_certificate.certificate",
            "module.elb_friendly_name.aws_acm_certificate_validation.cert_validation",
            "module.elb_friendly_name.aws_route53_record.domain_validation",
            "module.main-elb.aws_lb.this",
            "module.main-elb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.main-elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:003729975368:targetgroup/main20220704030229992900000001/ce689bbf597d6041",
            "arn_suffix": "targetgroup/main20220704030229992900000001/ce689bbf597d6041",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:003729975368:targetgroup/main20220704030229992900000001/ce689bbf597d6041",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "main20220704030229992900000001",
            "name_prefix": "main",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "main",
              "name": "main-tg"
            },
            "tags_all": {
              "Name": "main",
              "name": "main-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c1c65eedb209f445"
          },
          "dependencies": [
            "data.terraform_remote_state.level1-main-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}